Add model + training without sigmoid output

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
@@ -19,8 +19,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:23:33.565334Z",
-     "start_time": "2024-07-04T17:23:32.620182Z"
+     "end_time": "2024-07-11T22:43:19.699941Z",
+     "start_time": "2024-07-11T22:43:18.662937Z"
     }
    },
    "cell_type": "code",
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:23:33.593121Z",
-     "start_time": "2024-07-04T17:23:33.566222Z"
+     "end_time": "2024-07-11T22:43:19.789095Z",
+     "start_time": "2024-07-11T22:43:19.700675Z"
     }
    },
    "cell_type": "code",
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:29.140793Z",
-     "start_time": "2024-07-04T17:23:33.593544Z"
+     "end_time": "2024-07-11T22:44:10.093415Z",
+     "start_time": "2024-07-11T22:43:19.789685Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 70.46it/s]\n"
+      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.08it/s]\n"
      ]
     },
     {
@@ -107,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:29.145263Z",
-     "start_time": "2024-07-04T17:24:29.141872Z"
+     "end_time": "2024-07-11T22:44:10.097841Z",
+     "start_time": "2024-07-11T22:44:10.094435Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:29.624244Z",
-     "start_time": "2024-07-04T17:24:29.145678Z"
+     "end_time": "2024-07-11T22:44:10.291935Z",
+     "start_time": "2024-07-11T22:44:10.098235Z"
     }
    },
    "cell_type": "code",
@@ -176,8 +176,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:30.394418Z",
-     "start_time": "2024-07-04T17:24:29.627632Z"
+     "end_time": "2024-07-11T22:44:10.605473Z",
+     "start_time": "2024-07-11T22:44:10.292473Z"
     }
    },
    "cell_type": "code",
@@ -225,9 +225,9 @@
      "output_type": "stream",
      "text": [
       "Check length of datasets. should roughly match split ratio\n",
-      "train dataset: 14039\n",
-      "val dataset: 2855\n",
-      "test dataset: 2962\n",
+      "train dataset: 13440\n",
+      "val dataset: 3237\n",
+      "test dataset: 3179\n",
       "\n",
       "Visualize shape of batch:\n",
       "shape of one batch: torch.Size([64, 513, 24])\n",
@@ -238,8 +238,8 @@
       "=============\n",
       "Test print one snapshot:\n",
       "First half of values should be left hand, second half should be right hand\n",
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.,\n",
-      "        0., 1., 0., 0., 0., 0.])\n"
+      "tensor([0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 1., 0., 0.])\n"
      ]
     }
    ],
@@ -254,8 +254,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:30.396270Z",
-     "start_time": "2024-07-04T17:24:30.394886Z"
+     "end_time": "2024-07-11T22:44:10.607934Z",
+     "start_time": "2024-07-11T22:44:10.606222Z"
     }
    },
    "cell_type": "code",
@@ -279,8 +279,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:31.076445Z",
-     "start_time": "2024-07-04T17:24:30.396702Z"
+     "end_time": "2024-07-11T22:44:11.179956Z",
+     "start_time": "2024-07-11T22:44:10.608505Z"
     }
    },
    "cell_type": "code",
@@ -304,8 +304,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:31.085508Z",
-     "start_time": "2024-07-04T17:24:31.078388Z"
+     "end_time": "2024-07-11T22:44:11.182994Z",
+     "start_time": "2024-07-11T22:44:11.180451Z"
     }
    },
    "cell_type": "code",
@@ -338,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:24:31.100627Z",
-     "start_time": "2024-07-04T17:24:31.090404Z"
+     "end_time": "2024-07-11T22:44:11.192054Z",
+     "start_time": "2024-07-11T22:44:11.183969Z"
     }
    },
    "cell_type": "code",
@@ -409,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:41:20.767628Z",
-     "start_time": "2024-07-04T17:24:31.102889Z"
+     "end_time": "2024-07-11T23:00:01.479708Z",
+     "start_time": "2024-07-11T22:44:11.192950Z"
     }
    },
    "cell_type": "code",
@@ -431,27 +431,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Train loss: 0.180, Val loss: 0.128, Epoch time = 43.663s\n",
-      "Epoch: 2, Train loss: 0.127, Val loss: 0.124, Epoch time = 45.370s\n",
-      "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 45.283s\n",
-      "Epoch: 4, Train loss: 0.120, Val loss: 0.119, Epoch time = 45.278s\n",
-      "Epoch: 5, Train loss: 0.119, Val loss: 0.117, Epoch time = 45.276s\n",
-      "Epoch: 6, Train loss: 0.117, Val loss: 0.116, Epoch time = 45.275s\n",
-      "Epoch: 7, Train loss: 0.116, Val loss: 0.114, Epoch time = 45.275s\n",
-      "Epoch: 8, Train loss: 0.114, Val loss: 0.113, Epoch time = 45.252s\n",
-      "Epoch: 9, Train loss: 0.112, Val loss: 0.111, Epoch time = 45.274s\n",
-      "Epoch: 10, Train loss: 0.111, Val loss: 0.110, Epoch time = 45.255s\n",
-      "Epoch: 11, Train loss: 0.109, Val loss: 0.108, Epoch time = 45.251s\n",
-      "Epoch: 12, Train loss: 0.108, Val loss: 0.107, Epoch time = 45.257s\n",
-      "Epoch: 13, Train loss: 0.106, Val loss: 0.106, Epoch time = 45.253s\n",
-      "Epoch: 14, Train loss: 0.105, Val loss: 0.105, Epoch time = 45.269s\n",
-      "Epoch: 15, Train loss: 0.104, Val loss: 0.104, Epoch time = 45.256s\n",
-      "Epoch: 16, Train loss: 0.103, Val loss: 0.103, Epoch time = 45.251s\n",
-      "Epoch: 17, Train loss: 0.102, Val loss: 0.103, Epoch time = 45.237s\n",
-      "Epoch: 18, Train loss: 0.100, Val loss: 0.102, Epoch time = 45.266s\n",
-      "Epoch: 19, Train loss: 0.100, Val loss: 0.102, Epoch time = 45.259s\n",
-      "Epoch: 20, Train loss: 0.099, Val loss: 0.102, Epoch time = 45.257s\n",
-      "Epoch: 21, Train loss: 0.098, Val loss: 0.101, Epoch time = 45.252s\n"
+      "Epoch: 1, Train loss: 0.183, Val loss: 0.128, Epoch time = 41.395s\n",
+      "Epoch: 2, Train loss: 0.127, Val loss: 0.125, Epoch time = 42.138s\n",
+      "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 42.126s\n",
+      "Epoch: 4, Train loss: 0.120, Val loss: 0.119, Epoch time = 42.132s\n",
+      "Epoch: 5, Train loss: 0.119, Val loss: 0.118, Epoch time = 42.125s\n",
+      "Epoch: 6, Train loss: 0.117, Val loss: 0.117, Epoch time = 42.103s\n",
+      "Epoch: 7, Train loss: 0.116, Val loss: 0.115, Epoch time = 42.102s\n",
+      "Epoch: 8, Train loss: 0.114, Val loss: 0.114, Epoch time = 42.102s\n",
+      "Epoch: 9, Train loss: 0.113, Val loss: 0.112, Epoch time = 42.090s\n",
+      "Epoch: 10, Train loss: 0.111, Val loss: 0.110, Epoch time = 42.103s\n",
+      "Epoch: 11, Train loss: 0.109, Val loss: 0.109, Epoch time = 42.109s\n",
+      "Epoch: 12, Train loss: 0.108, Val loss: 0.107, Epoch time = 42.099s\n",
+      "Epoch: 13, Train loss: 0.106, Val loss: 0.107, Epoch time = 42.101s\n",
+      "Epoch: 14, Train loss: 0.105, Val loss: 0.105, Epoch time = 42.096s\n",
+      "Epoch: 15, Train loss: 0.104, Val loss: 0.105, Epoch time = 42.093s\n",
+      "Epoch: 16, Train loss: 0.103, Val loss: 0.104, Epoch time = 42.092s\n",
+      "Epoch: 17, Train loss: 0.102, Val loss: 0.103, Epoch time = 42.089s\n",
+      "Epoch: 18, Train loss: 0.101, Val loss: 0.103, Epoch time = 42.076s\n",
+      "Epoch: 19, Train loss: 0.100, Val loss: 0.103, Epoch time = 42.089s\n",
+      "Epoch: 20, Train loss: 0.099, Val loss: 0.102, Epoch time = 42.094s\n",
+      "Epoch: 21, Train loss: 0.098, Val loss: 0.102, Epoch time = 41.929s\n"
      ]
     }
    ],
@@ -689,8 +689,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T17:41:20.799362Z",
-     "start_time": "2024-07-04T17:41:20.768264Z"
+     "end_time": "2024-07-11T23:00:01.504190Z",
+     "start_time": "2024-07-11T23:00:01.480331Z"
     }
    },
    "cell_type": "code",
@@ -702,6 +702,141 @@
    "id": "25be820f644f6aa0",
    "outputs": [],
    "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Now training without sigmoid output function but BCEWithLogitsLoss\n",
+    "\n",
+    "And apply sigmoid function only during training"
+   ],
+   "id": "918f7b209c812e2e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-11T23:00:01.530846Z",
+     "start_time": "2024-07-11T23:00:01.504633Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformer_decoder_training.models.transformer_decoder_2 import Transformer as Transformer_2\n",
+    "# Use Transformer without sigmoid\n",
+    "model = Transformer_2(num_emb=24, num_layers=num_layers, hidden_size=hidden_size, num_heads=num_heads).to(device)\n",
+    "\n",
+    "# Initialize the optimizer with above parameters\n",
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "# Define the loss function\n",
+    "# loss function should be one that can handle multi one hot encoded vectors\n",
+    "# Klammern nicht vergessen\n",
+    "loss_fn = nn.BCEWithLogitsLoss()"
+   ],
+   "id": "f054f693dd2075e9",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-11T23:15:48.731857Z",
+     "start_time": "2024-07-11T23:00:01.531298Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for epoch in range(1, NUM_EPOCHS+1):\n",
+    "    start_time = timer()\n",
+    "    train_loss = train_loop(model, optimizer, loss_fn, train_loader, pad_token, device)\n",
+    "    end_time = timer()\n",
+    "    val_loss = validation_loop(model, loss_fn, val_loader, pad_token, device)\n",
+    "    print((f\"Epoch: {epoch}, Train loss: {train_loss:.3f}, Val loss: {val_loss:.3f}, \"f\"Epoch time = {(end_time - start_time):.3f}s\"))"
+   ],
+   "id": "84e84a2cd37231c1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1, Train loss: 0.196, Val loss: 0.129, Epoch time = 41.117s\n",
+      "Epoch: 2, Train loss: 0.127, Val loss: 0.126, Epoch time = 41.439s\n",
+      "Epoch: 3, Train loss: 0.124, Val loss: 0.122, Epoch time = 42.159s\n",
+      "Epoch: 4, Train loss: 0.121, Val loss: 0.120, Epoch time = 42.133s\n",
+      "Epoch: 5, Train loss: 0.119, Val loss: 0.119, Epoch time = 42.143s\n",
+      "Epoch: 6, Train loss: 0.118, Val loss: 0.118, Epoch time = 42.134s\n",
+      "Epoch: 7, Train loss: 0.117, Val loss: 0.116, Epoch time = 42.145s\n",
+      "Epoch: 8, Train loss: 0.115, Val loss: 0.115, Epoch time = 42.127s\n",
+      "Epoch: 9, Train loss: 0.114, Val loss: 0.114, Epoch time = 42.123s\n",
+      "Epoch: 10, Train loss: 0.113, Val loss: 0.112, Epoch time = 41.722s\n",
+      "Epoch: 11, Train loss: 0.111, Val loss: 0.111, Epoch time = 39.951s\n",
+      "Epoch: 12, Train loss: 0.110, Val loss: 0.110, Epoch time = 42.101s\n",
+      "Epoch: 13, Train loss: 0.109, Val loss: 0.109, Epoch time = 42.108s\n",
+      "Epoch: 14, Train loss: 0.107, Val loss: 0.108, Epoch time = 42.119s\n",
+      "Epoch: 15, Train loss: 0.106, Val loss: 0.107, Epoch time = 42.126s\n",
+      "Epoch: 16, Train loss: 0.105, Val loss: 0.106, Epoch time = 42.116s\n",
+      "Epoch: 17, Train loss: 0.104, Val loss: 0.105, Epoch time = 42.104s\n",
+      "Epoch: 18, Train loss: 0.103, Val loss: 0.105, Epoch time = 42.111s\n",
+      "Epoch: 19, Train loss: 0.102, Val loss: 0.104, Epoch time = 42.111s\n",
+      "Epoch: 20, Train loss: 0.101, Val loss: 0.104, Epoch time = 42.113s\n",
+      "Epoch: 21, Train loss: 0.100, Val loss: 0.103, Epoch time = 42.102s\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Output:\n",
+    "\"\"\"\n",
+    "Epoch: 1, Train loss: 0.196, Val loss: 0.129, Epoch time = 41.117s\n",
+    "Epoch: 2, Train loss: 0.127, Val loss: 0.126, Epoch time = 41.439s\n",
+    "Epoch: 3, Train loss: 0.124, Val loss: 0.122, Epoch time = 42.159s\n",
+    "Epoch: 4, Train loss: 0.121, Val loss: 0.120, Epoch time = 42.133s\n",
+    "Epoch: 5, Train loss: 0.119, Val loss: 0.119, Epoch time = 42.143s\n",
+    "Epoch: 6, Train loss: 0.118, Val loss: 0.118, Epoch time = 42.134s\n",
+    "Epoch: 7, Train loss: 0.117, Val loss: 0.116, Epoch time = 42.145s\n",
+    "Epoch: 8, Train loss: 0.115, Val loss: 0.115, Epoch time = 42.127s\n",
+    "Epoch: 9, Train loss: 0.114, Val loss: 0.114, Epoch time = 42.123s\n",
+    "Epoch: 10, Train loss: 0.113, Val loss: 0.112, Epoch time = 41.722s\n",
+    "Epoch: 11, Train loss: 0.111, Val loss: 0.111, Epoch time = 39.951s\n",
+    "Epoch: 12, Train loss: 0.110, Val loss: 0.110, Epoch time = 42.101s\n",
+    "Epoch: 13, Train loss: 0.109, Val loss: 0.109, Epoch time = 42.108s\n",
+    "Epoch: 14, Train loss: 0.107, Val loss: 0.108, Epoch time = 42.119s\n",
+    "Epoch: 15, Train loss: 0.106, Val loss: 0.107, Epoch time = 42.126s\n",
+    "Epoch: 16, Train loss: 0.105, Val loss: 0.106, Epoch time = 42.116s\n",
+    "Epoch: 17, Train loss: 0.104, Val loss: 0.105, Epoch time = 42.104s\n",
+    "Epoch: 18, Train loss: 0.103, Val loss: 0.105, Epoch time = 42.111s\n",
+    "Epoch: 19, Train loss: 0.102, Val loss: 0.104, Epoch time = 42.111s\n",
+    "Epoch: 20, Train loss: 0.101, Val loss: 0.104, Epoch time = 42.113s\n",
+    "Epoch: 21, Train loss: 0.100, Val loss: 0.103, Epoch time = 42.102s\n",
+    "\"\"\""
+   ],
+   "id": "d2d1fc549770619"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Modell scheint sich im Training nicht signifikant anders zu verhalten -> inferenz muss noch getestet werden",
+   "id": "2e98e3d16322d741"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-11T23:19:05.562941Z",
+     "start_time": "2024-07-11T23:19:05.490136Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.save(model.state_dict(), \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6_no_sigmoid.pth\")",
+   "id": "38c62a96a2e76ef7",
+   "outputs": [],
+   "execution_count": 15
   }
  ],
  "metadata": {
