git test change

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
@@ -822,7 +822,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Modell scheint sich im Training nicht signifikant anders zu verhalten -> inferenz muss noch getestet werden",
+   "source": [
+    "Modell scheint sich im Training nicht signifikant anders zu verhalten -> inferenz muss noch getestet werden\n",
+    "\n"
+   ],
    "id": "2e98e3d16322d741"
   },
   {
