Try inference for model without sigmoid output

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
@@ -709,7 +709,7 @@
    "source": [
     "# Now training without sigmoid output function but BCEWithLogitsLoss\n",
     "\n",
-    "And apply sigmoid function only during training"
+    "And apply sigmoid function during training"
    ],
    "id": "918f7b209c812e2e"
   },
