Try inference with sampling

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Use the new data preperation function",
+   "source": "Test of the new data preperation function",
    "id": "47a3cff2f46846ee"
   },
   {
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:37:16.086020Z",
-     "start_time": "2024-07-19T22:37:15.201576Z"
+     "end_time": "2024-07-21T21:31:43.567652Z",
+     "start_time": "2024-07-21T21:31:42.742219Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:37:16.130611Z",
-     "start_time": "2024-07-19T22:37:16.086931Z"
+     "end_time": "2024-07-21T21:31:43.595745Z",
+     "start_time": "2024-07-21T21:31:43.568694Z"
     }
    },
    "cell_type": "code",
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:37:16.308864Z",
-     "start_time": "2024-07-19T22:37:16.131238Z"
+     "end_time": "2024-07-21T21:31:43.733486Z",
+     "start_time": "2024-07-21T21:31:43.596357Z"
     }
    },
    "cell_type": "code",
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:38:09.897786Z",
-     "start_time": "2024-07-19T22:37:16.309416Z"
+     "end_time": "2024-07-21T21:32:35.221048Z",
+     "start_time": "2024-07-21T21:31:43.734410Z"
     }
    },
    "cell_type": "code",
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:15<00:00, 66.23it/s]\n"
+      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.90it/s]\n"
      ]
     },
     {
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:38:09.900619Z",
-     "start_time": "2024-07-19T22:38:09.898701Z"
+     "end_time": "2024-07-21T21:32:35.223959Z",
+     "start_time": "2024-07-21T21:32:35.221734Z"
     }
    },
    "cell_type": "code",
@@ -149,8 +149,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:38:10.658994Z",
-     "start_time": "2024-07-19T22:38:09.900987Z"
+     "end_time": "2024-07-21T21:32:35.582143Z",
+     "start_time": "2024-07-21T21:32:35.224415Z"
     }
    },
    "cell_type": "code",
@@ -175,8 +175,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T22:42:19.890577Z",
-     "start_time": "2024-07-19T22:38:10.659808Z"
+     "end_time": "2024-07-21T21:49:08.120236Z",
+     "start_time": "2024-07-21T21:32:35.582656Z"
     }
    },
    "cell_type": "code",
@@ -199,30 +199,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Train loss: 205.104, Val loss: 209.343, Epoch time = 41.399s\n",
-      "Epoch: 2, Train loss: 202.452, Val loss: 208.349, Epoch time = 43.040s\n",
-      "Epoch: 3, Train loss: 201.487, Val loss: 207.765, Epoch time = 43.048s\n",
-      "Epoch: 4, Train loss: 200.740, Val loss: 206.864, Epoch time = 43.385s\n",
-      "Epoch: 5, Train loss: 199.937, Val loss: 206.155, Epoch time = 43.302s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 8\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m1\u001B[39m, NUM_EPOCHS\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m      7\u001B[0m     start_time \u001B[38;5;241m=\u001B[39m timer()\n\u001B[0;32m----> 8\u001B[0m     train_loss \u001B[38;5;241m=\u001B[39m \u001B[43mtraining_1\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain_loop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mloss_fn\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtrain_loader\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpad_token\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m     end_time \u001B[38;5;241m=\u001B[39m timer()\n\u001B[1;32m     10\u001B[0m     val_loss \u001B[38;5;241m=\u001B[39m training_1\u001B[38;5;241m.\u001B[39mvalidation_loop(model, loss_fn, val_loader, pad_token, device)\n",
-      "File \u001B[0;32m~/Repos/minus1/transformer_decoder_training/training/training_1.py:32\u001B[0m, in \u001B[0;36mtrain_loop\u001B[0;34m(model, opt, loss_fn, dataloader, pad_token, device)\u001B[0m\n\u001B[1;32m     30\u001B[0m \u001B[38;5;66;03m# Backpropagation\u001B[39;00m\n\u001B[1;32m     31\u001B[0m opt\u001B[38;5;241m.\u001B[39mzero_grad()\n\u001B[0;32m---> 32\u001B[0m \u001B[43mloss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     33\u001B[0m opt\u001B[38;5;241m.\u001B[39mstep()\n\u001B[1;32m     35\u001B[0m total_loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m loss\u001B[38;5;241m.\u001B[39mdetach()\u001B[38;5;241m.\u001B[39mitem()\n",
-      "File \u001B[0;32m~/Repos/minus1/venv/lib64/python3.12/site-packages/torch/_tensor.py:525\u001B[0m, in \u001B[0;36mTensor.backward\u001B[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001B[0m\n\u001B[1;32m    515\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m has_torch_function_unary(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m    516\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m handle_torch_function(\n\u001B[1;32m    517\u001B[0m         Tensor\u001B[38;5;241m.\u001B[39mbackward,\n\u001B[1;32m    518\u001B[0m         (\u001B[38;5;28mself\u001B[39m,),\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    523\u001B[0m         inputs\u001B[38;5;241m=\u001B[39minputs,\n\u001B[1;32m    524\u001B[0m     )\n\u001B[0;32m--> 525\u001B[0m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mautograd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    526\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgradient\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43minputs\u001B[49m\n\u001B[1;32m    527\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/Repos/minus1/venv/lib64/python3.12/site-packages/torch/autograd/__init__.py:267\u001B[0m, in \u001B[0;36mbackward\u001B[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[0m\n\u001B[1;32m    262\u001B[0m     retain_graph \u001B[38;5;241m=\u001B[39m create_graph\n\u001B[1;32m    264\u001B[0m \u001B[38;5;66;03m# The reason we repeat the same comment below is that\u001B[39;00m\n\u001B[1;32m    265\u001B[0m \u001B[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001B[39;00m\n\u001B[1;32m    266\u001B[0m \u001B[38;5;66;03m# calls in the traceback and some print out the last line\u001B[39;00m\n\u001B[0;32m--> 267\u001B[0m \u001B[43m_engine_run_backward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    268\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtensors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    269\u001B[0m \u001B[43m    \u001B[49m\u001B[43mgrad_tensors_\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    270\u001B[0m \u001B[43m    \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    271\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    272\u001B[0m \u001B[43m    \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    273\u001B[0m \u001B[43m    \u001B[49m\u001B[43mallow_unreachable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    274\u001B[0m \u001B[43m    \u001B[49m\u001B[43maccumulate_grad\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    275\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/Repos/minus1/venv/lib64/python3.12/site-packages/torch/autograd/graph.py:744\u001B[0m, in \u001B[0;36m_engine_run_backward\u001B[0;34m(t_outputs, *args, **kwargs)\u001B[0m\n\u001B[1;32m    742\u001B[0m     unregister_hooks \u001B[38;5;241m=\u001B[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001B[1;32m    743\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 744\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mVariable\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_execution_engine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_backward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001B[39;49;00m\n\u001B[1;32m    745\u001B[0m \u001B[43m        \u001B[49m\u001B[43mt_outputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\n\u001B[1;32m    746\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m  \u001B[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001B[39;00m\n\u001B[1;32m    747\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[1;32m    748\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m attach_logging_hooks:\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "Epoch: 1, Train loss: 0.191, Val loss: 0.129, Epoch time = 44.787s\n",
+      "Epoch: 2, Train loss: 0.127, Val loss: 0.125, Epoch time = 44.757s\n",
+      "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 44.990s\n",
+      "Epoch: 4, Train loss: 0.120, Val loss: 0.120, Epoch time = 44.925s\n",
+      "Epoch: 5, Train loss: 0.118, Val loss: 0.118, Epoch time = 45.111s\n",
+      "Epoch: 6, Train loss: 0.117, Val loss: 0.117, Epoch time = 44.873s\n",
+      "Epoch: 7, Train loss: 0.115, Val loss: 0.117, Epoch time = 44.724s\n",
+      "Epoch: 8, Train loss: 0.114, Val loss: 0.114, Epoch time = 44.711s\n",
+      "Epoch: 9, Train loss: 0.112, Val loss: 0.112, Epoch time = 44.708s\n",
+      "Epoch: 10, Train loss: 0.111, Val loss: 0.110, Epoch time = 44.755s\n",
+      "Epoch: 11, Train loss: 0.109, Val loss: 0.109, Epoch time = 44.716s\n",
+      "Epoch: 12, Train loss: 0.108, Val loss: 0.108, Epoch time = 44.706s\n",
+      "Epoch: 13, Train loss: 0.107, Val loss: 0.107, Epoch time = 44.719s\n",
+      "Epoch: 14, Train loss: 0.105, Val loss: 0.106, Epoch time = 44.717s\n",
+      "Epoch: 15, Train loss: 0.104, Val loss: 0.105, Epoch time = 44.768s\n",
+      "Epoch: 16, Train loss: 0.103, Val loss: 0.104, Epoch time = 44.702s\n",
+      "Epoch: 17, Train loss: 0.102, Val loss: 0.103, Epoch time = 44.698s\n",
+      "Epoch: 18, Train loss: 0.101, Val loss: 0.102, Epoch time = 44.700s\n",
+      "Epoch: 19, Train loss: 0.100, Val loss: 0.102, Epoch time = 44.691s\n",
+      "Epoch: 20, Train loss: 0.099, Val loss: 0.102, Epoch time = 44.691s\n",
+      "Epoch: 21, Train loss: 0.099, Val loss: 0.101, Epoch time = 44.687s\n"
      ]
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T21:49:08.137679Z",
+     "start_time": "2024-07-21T21:49:08.120847Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.save(model.state_dict(), \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6.1.pth\")",
+   "id": "c7d6c3fe415c9e19",
+   "outputs": [],
+   "execution_count": 8
   }
  ],
  "metadata": {
