Save model and training parameters alongside model

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:31:43.567652Z",
-     "start_time": "2024-07-21T21:31:42.742219Z"
+     "end_time": "2024-07-24T16:44:55.284981Z",
+     "start_time": "2024-07-24T16:44:54.138068Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:31:43.595745Z",
-     "start_time": "2024-07-21T21:31:43.568694Z"
+     "end_time": "2024-07-24T16:44:55.389806Z",
+     "start_time": "2024-07-24T16:44:55.285693Z"
     }
    },
    "cell_type": "code",
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:31:43.733486Z",
-     "start_time": "2024-07-21T21:31:43.596357Z"
+     "end_time": "2024-07-24T16:44:55.527644Z",
+     "start_time": "2024-07-24T16:44:55.390344Z"
     }
    },
    "cell_type": "code",
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:32:35.221048Z",
-     "start_time": "2024-07-21T21:31:43.734410Z"
+     "end_time": "2024-07-24T16:45:48.369068Z",
+     "start_time": "2024-07-24T16:44:55.528303Z"
     }
    },
    "cell_type": "code",
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.90it/s]\n"
+      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.18it/s]\n"
      ]
     },
     {
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:32:35.223959Z",
-     "start_time": "2024-07-21T21:32:35.221734Z"
+     "end_time": "2024-07-24T16:45:48.371990Z",
+     "start_time": "2024-07-24T16:45:48.369720Z"
     }
    },
    "cell_type": "code",
@@ -134,8 +134,10 @@
     "# Learning rate for the optimizer\n",
     "learning_rate = 1e-3\n",
     "# Number of epochs for training\n",
-    "nepochs = 20\n",
-    "# Embedding Size\n",
+    "num_epochs = 20\n",
+    "# basically input dimension before embedding\n",
+    "num_emb = 24\n",
+    "# size after embedding for feed forward neural network\n",
     "hidden_size = 256\n",
     "# Number of transformer blocks\n",
     "num_layers = 8\n",
@@ -149,15 +151,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:32:35.582143Z",
-     "start_time": "2024-07-21T21:32:35.224415Z"
+     "end_time": "2024-07-24T16:45:48.732978Z",
+     "start_time": "2024-07-24T16:45:48.372467Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from transformer_decoder_training.models.transformer_decoder_2 import Transformer\n",
     "\n",
-    "model = Transformer(num_emb=24, num_layers=num_layers, hidden_size=hidden_size, num_heads=num_heads).to(device)\n",
+    "model = Transformer(num_emb=num_emb, num_layers=num_layers, hidden_size=hidden_size, num_heads=num_heads).to(device)\n",
     "\n",
     "# Initialize the optimizer with above parameters\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -175,8 +177,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:49:08.120236Z",
-     "start_time": "2024-07-21T21:32:35.582656Z"
+     "end_time": "2024-07-24T17:01:13.616915Z",
+     "start_time": "2024-07-24T16:45:48.733819Z"
     }
    },
    "cell_type": "code",
@@ -184,9 +186,7 @@
     "from timeit import default_timer as timer\n",
     "from transformer_decoder_training.training import training_1\n",
     "\n",
-    "NUM_EPOCHS = 21\n",
-    "\n",
-    "for epoch in range(1, NUM_EPOCHS+1):\n",
+    "for epoch in range(1, num_epochs+1):\n",
     "    start_time = timer()\n",
     "    train_loss = training_1.train_loop(model, optimizer, loss_fn, train_loader, pad_token, device)\n",
     "    end_time = timer()\n",
@@ -199,27 +199,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Train loss: 0.191, Val loss: 0.129, Epoch time = 44.787s\n",
-      "Epoch: 2, Train loss: 0.127, Val loss: 0.125, Epoch time = 44.757s\n",
-      "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 44.990s\n",
-      "Epoch: 4, Train loss: 0.120, Val loss: 0.120, Epoch time = 44.925s\n",
-      "Epoch: 5, Train loss: 0.118, Val loss: 0.118, Epoch time = 45.111s\n",
-      "Epoch: 6, Train loss: 0.117, Val loss: 0.117, Epoch time = 44.873s\n",
-      "Epoch: 7, Train loss: 0.115, Val loss: 0.117, Epoch time = 44.724s\n",
-      "Epoch: 8, Train loss: 0.114, Val loss: 0.114, Epoch time = 44.711s\n",
-      "Epoch: 9, Train loss: 0.112, Val loss: 0.112, Epoch time = 44.708s\n",
-      "Epoch: 10, Train loss: 0.111, Val loss: 0.110, Epoch time = 44.755s\n",
-      "Epoch: 11, Train loss: 0.109, Val loss: 0.109, Epoch time = 44.716s\n",
-      "Epoch: 12, Train loss: 0.108, Val loss: 0.108, Epoch time = 44.706s\n",
-      "Epoch: 13, Train loss: 0.107, Val loss: 0.107, Epoch time = 44.719s\n",
-      "Epoch: 14, Train loss: 0.105, Val loss: 0.106, Epoch time = 44.717s\n",
-      "Epoch: 15, Train loss: 0.104, Val loss: 0.105, Epoch time = 44.768s\n",
-      "Epoch: 16, Train loss: 0.103, Val loss: 0.104, Epoch time = 44.702s\n",
-      "Epoch: 17, Train loss: 0.102, Val loss: 0.103, Epoch time = 44.698s\n",
-      "Epoch: 18, Train loss: 0.101, Val loss: 0.102, Epoch time = 44.700s\n",
-      "Epoch: 19, Train loss: 0.100, Val loss: 0.102, Epoch time = 44.691s\n",
-      "Epoch: 20, Train loss: 0.099, Val loss: 0.102, Epoch time = 44.691s\n",
-      "Epoch: 21, Train loss: 0.099, Val loss: 0.101, Epoch time = 44.687s\n"
+      "Epoch: 1, Train loss: 0.182, Val loss: 0.127, Epoch time = 41.829s\n",
+      "Epoch: 2, Train loss: 0.126, Val loss: 0.123, Epoch time = 43.639s\n",
+      "Epoch: 3, Train loss: 0.123, Val loss: 0.120, Epoch time = 43.638s\n",
+      "Epoch: 4, Train loss: 0.120, Val loss: 0.118, Epoch time = 43.638s\n",
+      "Epoch: 5, Train loss: 0.118, Val loss: 0.116, Epoch time = 43.641s\n",
+      "Epoch: 6, Train loss: 0.117, Val loss: 0.115, Epoch time = 43.622s\n",
+      "Epoch: 7, Train loss: 0.115, Val loss: 0.114, Epoch time = 43.616s\n",
+      "Epoch: 8, Train loss: 0.114, Val loss: 0.112, Epoch time = 43.615s\n",
+      "Epoch: 9, Train loss: 0.112, Val loss: 0.111, Epoch time = 41.752s\n",
+      "Epoch: 10, Train loss: 0.111, Val loss: 0.109, Epoch time = 43.632s\n",
+      "Epoch: 11, Train loss: 0.109, Val loss: 0.108, Epoch time = 43.603s\n",
+      "Epoch: 12, Train loss: 0.108, Val loss: 0.107, Epoch time = 43.590s\n",
+      "Epoch: 13, Train loss: 0.106, Val loss: 0.106, Epoch time = 43.579s\n",
+      "Epoch: 14, Train loss: 0.105, Val loss: 0.105, Epoch time = 43.586s\n",
+      "Epoch: 15, Train loss: 0.104, Val loss: 0.104, Epoch time = 43.599s\n",
+      "Epoch: 16, Train loss: 0.103, Val loss: 0.103, Epoch time = 43.582s\n",
+      "Epoch: 17, Train loss: 0.102, Val loss: 0.103, Epoch time = 43.594s\n",
+      "Epoch: 18, Train loss: 0.101, Val loss: 0.102, Epoch time = 43.583s\n",
+      "Epoch: 19, Train loss: 0.100, Val loss: 0.102, Epoch time = 43.579s\n",
+      "Epoch: 20, Train loss: 0.099, Val loss: 0.102, Epoch time = 43.580s\n"
      ]
     }
    ],
@@ -228,15 +227,40 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T21:49:08.137679Z",
-     "start_time": "2024-07-21T21:49:08.120847Z"
+     "end_time": "2024-07-24T17:15:40.959809Z",
+     "start_time": "2024-07-24T17:15:40.920944Z"
     }
    },
    "cell_type": "code",
-   "source": "torch.save(model.state_dict(), \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6.1.pth\")",
+   "source": [
+    "import json\n",
+    "\n",
+    "model_state_dict_filepath = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/model_1_notebook_v6.1\"\n",
+    "\n",
+    "torch.save(model.state_dict(), model_state_dict_filepath + \".pth\")\n",
+    "# save the parameters\n",
+    "model_params = {\n",
+    "    \"num_emb\": num_emb,\n",
+    "    \"hidden_size\": hidden_size,\n",
+    "    \"num_layers\": num_layers,\n",
+    "    \"num_heads\": num_heads,\n",
+    "    \"training_params\": {\n",
+    "        \"learning_rate\": learning_rate,\n",
+    "        \"num_epochs\": num_epochs,\n",
+    "        \"optimizer\": optimizer.__class__.__name__,\n",
+    "        \"loss_fn\": loss_fn.__class__.__name__\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Save the model parameters separately as a JSON file\n",
+    "params_path = model_state_dict_filepath + \"_model_params.json\"\n",
+    "with open(params_path, 'w') as f:\n",
+    "    json.dump(model_params, f)\n",
+    "\n"
+   ],
    "id": "c7d6c3fe415c9e19",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 11
   }
  ],
  "metadata": {
