Add new model with basic CrossEntropyLoss

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.1.ipynb
@@ -3,7 +3,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Test of the new data preperation function",
+   "source": [
+    "Test of the new data preperation function\n",
+    "\n",
+    "decoder only transformer with \n",
+    "\n",
+    "- 24 keys\n",
+    "- loss: BCEWithLogitsLoss()"
+   ],
    "id": "47a3cff2f46846ee"
   },
   {
